# nix-proj-setup

./: Cargo.toml  README.md  crates.nix  flake.nix
src/: cli.rs  main.rs  nix.rs  util.rs
