[package]
name = "nix-proj-setup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nps"
path = "src/main.rs"

[dependencies]
colored = "2.1.0"
dialoguer = "0.11.0"
indicatif = "0.17.7"
miette = { version = "5.10.0", features = ["fancy"] }
ruplacer = "0.8.2"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "tracing", "process", "io-std", "io-util", "sync", "fs"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
